Replace IndexNameExpressionResolver in TransportSwapRelations/OpenTable